--- a/lib/style.less
+++ b/lib/style.less
@@ -3,3 +3,87 @@
   text-align: center;
   padding-top: 90px;
 }
+
+.user-ranking-container {
+}
+
+.user-ranking-container .user-data-container{
+  width: 100%;
+  cursor:pointer;
+}
+
+.user-ranking-container .user-box {
+  display: flex;
+  border-bottom: 1px solid gray;
+}
+
+.user-ranking-container .user-box .user-rank {
+  width: 50px;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center
+}
+
+.user-ranking-container  .user-box .user-name {
+  flex-grow: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center
+}
+
+.user-ranking-container  .user-box .user-score-sum {
+  width: 150px;
+  display: flex;
+  align-items: center;
+  justify-content: center
+}
+
+.user-ranking-container .user-data-container .score-box {
+ padding-left: 250px;
+  padding-right: 50px;
+}
+
+.user-ranking-container .user-data-container .score-box .scores{
+ display:flex;
+  border-bottom: 1px solid gray;
+}
+
+.user-ranking-container .user-data-container .score-box .scores .score-rank{
+  width:50px;
+  height:30px;
+  display: flex;
+  align-items: center;
+  justify-content: center
+}
+
+.user-ranking-container .user-data-container .score-box .scores .score-points{
+  flex-grow: 1;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  padding-right: 15px;
+}
+
+.user-form-container {
+  display: flex;
+  justify-content: space-between;
+  padding-left: 150px;
+}
+
+.user-form-container input {
+  width: 200px;
+  height: 40px;
+  border-radius: 5px;
+  padding-left: 10px;
+}
+
+.user-form-container button {
+  height: 40px;
+  border-radius: 5px;
+}
+
+.message {
+  margin-top: 10px;
+  align-items: center;
+}
